# dynamodb-playground

./: Cargo.toml  compose.yaml
model/: Cargo.toml
model/src/: error.rs  group.rs  user.rs
persist/: Cargo.toml
persist/src/: error.rs  lib.rs  repository.rs
src/: main.rs
