[workspace]
members = ["model", "persist"]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1.75"
aws-sdk-dynamodb = "1.9.0"
model.path = "model"
persist.path = "persist"
serde = { version = "1.0.193", features = ["derive"] }
serde_dynamo = { version = "4.2.13", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.108"
type-safe-id = "0.2.1"

[workspace.package]
edition = "2021"
version = "0.0.0"
